# brownfield-cartographer

./: .gitignore  Makefile  README.md  RECONNNAISSANCE.md  cartographer.toml  pyproject.toml
.cartography/: lineage_graph.json
.cartography/airflow/: cartography_trace.jsonl  lineage_graph.json
.cartography/brownfield-cartographer/: CODEBASE.md  cartography_trace.jsonl  embeddings.json  last_run.json  module_graph.json  onboarding_brief.md
.cartography/dbt-core/: CODEBASE.md  cartography_trace.jsonl  last_run.json  lineage_graph.json  module_graph.json  onboarding_brief.md
.cartography/jaffle-shop/: CODEBASE.md  cartography_trace.jsonl  last_run.json  lineage_graph.json  module_graph.json  onboarding_brief.md
.cartography/mlflow/: cartography_trace.jsonl
.cartography/ol-data-platform/: CODEBASE.md  cartography_trace.jsonl  embeddings.json  last_run.json  lineage_graph.json  module_graph.json  onboarding_brief.md
.cartography/sqlalchemy/: CODEBASE.md  cartography_trace.jsonl  last_run.json  lineage_graph.json  module_graph.json  onboarding_brief.md
docs/reports/: RECONNAISSANCE-dbt-core.md  RECONNAISSANCE-sqlalchemy.md  cartographer-final-report.md  cartographer-interim-report.md
scripts/: md_to_pdf.py
src/: cli.py  llm_config.py  orchestrator.py
src/agents/: __init__.py  archivist.py  surveyor.py  (+3 more)
tests/: test_archivist.py  test_dag_config_parser.py  test_knowledge_graph.py  test_llm_config.py  test_models_edges.py  test_navigator.py  test_orchestrator.py  test_python_data_flow.py  test_semanticist.py  test_sql_lineage.py  test_tree_sitter_analyzer.py
(+11 files in other folders)
