[project]
name = "brownfield-cartographer"
version = "0.1.0"
description = "A multi-agent codebase intelligence system that produces a living, queryable knowledge graph of system architecture, data flows, and semantic structure."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.25",
    "tree-sitter-yaml>=0.7",
    "tree-sitter-javascript>=0.25",
    "tree-sitter-typescript>=0.23",
    "sqlglot>=24.0",
    "networkx>=3.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tree-sitter-sql>=0.3.11",
    "litellm>=1.40",
    "langsmith>=0.1",
    "scikit-learn>=1.3",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
cartographer = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
